--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ nav ul li a:hover {
 
 /* Hero Section */
 #hero {
-    background-image: url('hero-bg.jpg');
+    background-image: url('banner.jpg');
     background-size: cover;
     background-position: center;
     height: 500px;
@@ -111,10 +111,16 @@ nav ul li a:hover {
     transform: translateY(-5px);
 }
 
-.product img {
+.product-image {
     width: 100%;
     height: 200px;
     object-fit: cover;
+    transition: transform 0.4s ease;
+}
+
+.product-image:hover {
+    transform: scale(1.2);
+    z-index: 10;
 }
 
 .product h3 {
